# Rust_API

./: .env.example  .gitignore  COMPARISON.md  Cargo.toml  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml
.github/workflows/: rust.yml
src/: main.rs
src/configs/: database.rs  mod.rs
src/controllers/: auth.rs  mod.rs  order.rs  user.rs
src/libs/: calendar.rs  email.rs  mod.rs  sms.rs
src/middlewares/: common.rs  jwt.rs  mod.rs  uploadfile.rs
src/models/: category.rs  customer.rs  mod.rs  order.rs  product.rs  shop.rs  user.rs
src/routes/: mod.rs
src/structs/: auth.rs  common.rs  customer.rs  mod.rs  order.rs  user.rs
